--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@
     border-radius: var(--border-radius-3);
     color: var(--clr-gray-100);
     border: none;
+    margin-inline: 0.25rem;
   }
 
   .button:hover,
