--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,11 @@
     --clr-white: hsl(0, 0%, 100%);
     --clr-gray-100: hsl(0, 4%, 87%);
 
+    --clr-green-dark: rgb(0, 38, 7);
+    --clr-green-extra-dark: rgb(0, 9, 2);
+
+    --clr-gold-medium: #d6ae11;
+
     --fs-300: 0.875rem;
     --fs-400: 1rem;
     --fs-500: 1.125rem;
@@ -127,14 +132,17 @@
     --text-brand-light: var(--clr-brand-400);
 
     --background-accent-light: var(--clr-green-400);
-    --background-accent-main: var(--clr-green-500);
+
+    --background-accent-main: var(--clr-gold-medium);
+
     --background-accent-dark: var(--clr-green-600);
 
     --background-extra-light: var(--clr-brown-500);
     --background-light: var(--clr-brown-600);
     --background-main: var(--clr-brown-700);
-    --background-dark: var(--clr-brown-800);
-    --background-extra-dark: var(--clr-brown-900);
+
+    --background-dark: var(--clr-green-dark);
+    --background-extra-dark: var(--clr-green-extra-dark);
 
     --font-size-heading-sm: var(--fs-700);
     --font-size-heading-regular: var(--fs-800);
@@ -199,7 +207,7 @@
 
     &.blank {
       height: 80px;
-      border: solid 1px #d6ae11;
+      border: solid 1px var(--background-accent-main);
       background: none;
     }
 
@@ -231,13 +239,34 @@
   [data-hit] {
     background-color: #8c1313;
   }
+
+  .winners__dialog {
+    width: 80%;
+    border-radius: var(--border-radius-2);
+    border-color: var(--background-accent-main);
+    background-color: var(--background-dark);
+    color: var(--clr-gray-100);
+
+    @media (width > 760px) {
+      width: 500px;
+    }
+  }
+
+  .winners__dialog::backdrop {
+    background-color: var(--background-extra-dark);
+    opacity: 0.75;
+  }
 }
 
 @layer layout {
   body {
     font-family: sans-serif;
     margin: 1em auto;
-    background: radial-gradient(circle at center, rgb(0, 38, 7), rgb(0, 9, 2));
+    background: radial-gradient(
+      circle at center,
+      var(--background-dark),
+      var(--background-extra-dark)
+    );
     color: var(--clr-gray-100);
     padding-inline: 1rem;
     display: flex;
