Fix 1st card render problem (Dealer and Players) on 2nd game

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@
       padding: 5px;
     }
 
-    &.blank {
+    &.accent {
       height: 80px;
       border: solid 1px var(--background-accent-main);
       background: none;
